--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,17 @@
   font-size: large;
 }
 
+a {
+  text-decoration: none;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+/*for signUp from*/
+@media(min-width: 768px) {
+  .field-label-responsive {
+    padding-top: .5rem;
+    text-align: right;
+  }
 }
