Components and route albums Close #13

--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,13 @@ a {
   text-decoration: none;
 }
 .fadeCardBgr{
-  background: rgb(205,242,198)
+  background: rgb(205,242,198);
 }
+.cardAlbumsAll {
+  background-color: rgba(70,70,70,0.4);
+  border-color: rgba(70,70,70,0.4);
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
