Show Albums and Show single album created Close #14

--- a/src/components/navBar/SideNav.css
+++ b/src/components/navBar/SideNav.css
@@ -40,7 +40,7 @@
     font-weight: 600;
 }
 /* main content styles */
-.main-content {
+.main-content-side-nav {
     padding: 40px;
     margin-top: 0;
     padding: 0;
