--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,21 @@ a.disabled {
   background-color: rgba(70,70,70,0.4);
   border-color: rgba(70,70,70,0.4);
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.buttonsWelcomePage {
+    font-family: "museo-sans", "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
+    color: rgb(255, 255, 255);
+    background-color: rgba(35,160,186, .5);
+    border-color: rgba(255, 255, 255, 1);
+    transition: all 0.3s ease 0s;
+    animation: fadein 2s;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 10px;
+    border: 1px solid #096783;
+    margin: 2% 1.5%;
 }
+
 /*for signUp from*/
 @media(min-width: 768px) {
   .field-label-responsive {
